--- a/server/src/main/resources/META-INF/resources/index.html
+++ b/server/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>christmas-tree - 1.0-SNAPSHOT</title>
+    <title>xmas-trees - 1.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -145,7 +145,7 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>at.htl</code></li>
-                <li>ArtifactId: <code>christmas-tree</code></li>
+                <li>ArtifactId: <code>xmas-trees</code></li>
                 <li>Version: <code>1.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.5.0.Final</code></li>
             </ul>
